--- a/src/app/components/layouts/auth/auth.html
+++ b/src/app/components/layouts/auth/auth.html
@@ -10,7 +10,10 @@
     <div banner-auth>
         <slot name="banner">
             <div content-banner-auth>
-                <h3>Receba se quando quiser em qualquer lugar</h3>
+                <router-link to="/" class="back-page white">
+                    <img src="../images/icons/arrow_left_white.svg" alt="Voltar para a Homepage">
+                </router-link>
+                <h3>Receba onde quiser em qualquer lugar</h3>
                 <h4>Entre na sua conta e aproveite as melhores ofertas</h4>
             </div>
         </slot>
