--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -1,7 +1,12 @@
 $breakpoints: (
-    xs: 567px, // max
-    sm: 568px,
-    md: 768px,
+    // xs: 567px, // max
+    // sm: 568px,
+    // md: 768px,
+    // lg: 1024px,
+    // xl: 1280px
+    xs: 567px,
+    sm: 690px,
+    md: 840px,
     lg: 1024px,
     xl: 1280px
 );
